ff-macros/tests/field_list_failures/not_struct.stderr
error: enums aren't supported
 --> tests/field_list_failures/not_struct.rs:4:1
  |
4 | enum Test {}
  | ^^^^
