ff-macros/tests/field_list_failures/not_struct.rs
use ff_macros::*;

#[derive(FieldList)]
enum Test {}

fn main() {}